--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "path": "^0.12.7",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
