--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.4"
