--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     // 基本配置
     "target": "ES6", // 编译成哪个版本的 es
     "module": "commonjs", // 指定生成哪个模块系统代码
-    "lib": ["dom", "dom.iterable", "esnext"], // 编译过程中需要引入的库文件的列表
+    "lib": ["dom", "esnext"], // 编译过程中需要引入的库文件的列表
     "allowJs": true, // 允许编译 js 文件
     "jsx": "react", // 在 .tsx 文件里支持 JSX
     "isolatedModules": true,
     "strict": true, // 启用所有严格类型检查选项
 
     // 模块解析选项
-    "moduleResolution": "node", // 指定模块解析策略
+    "moduleResolution": "Node", // 指定模块解析策略
     "esModuleInterop": true, // 支持 CommonJS 和 ES 模块之间的互操作性
     "resolveJsonModule": true, // 支持导入 json 模块
     "baseUrl": "./", // 根路径
