--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -34,12 +35,14 @@
     "eslint-plugin-react": "^7.31.9",
     "eslint-webpack-plugin": "^3.2.0",
     "express": "^4.18.2",
+    "glob-all": "^3.3.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "path": "^0.12.7",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
     "prettier": "^2.7.1",
+    "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
@@ -51,9 +54,12 @@
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
-    "axios": "^1.1.2",
+    "antd": "4.6.3",
+    "axios": "0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "typescript": "^4.8.4"
   }
 }
