--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newssystem",
   "version": "1.0.0",
-  "description": "",
+  "description": "基于webpack5,React18,react-router6,TypeScript,Antd4,Mobx,Sass项目模板搭建",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
@@ -23,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-import": "1.13.3",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.25.5",
     "cross-env": "^7.0.3",
@@ -43,18 +45,19 @@
     "postcss-preset-env": "^7.8.2",
     "prettier": "^2.7.1",
     "purgecss-webpack-plugin": "^5.0.0",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.74.0",
+    "webpack": "5.61.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "4.4.0",
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
-    "antd": "4.6.3",
+    "antd": "^4.23.5",
     "axios": "0.27.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
