--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es5",
+    "useDefineForClassFields": true,
+    "sourceMap": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "esModuleInterop": false,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
+    // "module": "CommonJS",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react", // react18这里也可以改成react-jsx
+    "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
       // 路径映射，与 baseUrl 关联
@@ -21,5 +23,5 @@
     }
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
